# TradeCouncil

./: .env.example  .gitattributes  .gitignore  BACKLOG.md  CLAUDE.md  DEVELOPMENT.md  DOCS.md  FEATURES.md  README.md  REQUIREMENTS.md  TESTCASES.md  conftest.py  pyproject.toml  sharepoint.config.json
.claude/: settings.json  settings.local.json.example
.claude/agents/: README.md  balthasar.md  dev-explorer.md  dev-implementer.md  dev-reviewer.md  dev-tester.md  momentum_trader.md  quant_validator.md  (+1 more)
Accounting/: BACKLOG.md  CLAUDE.md  DEVELOPMENT.md  DOCS.md  FEATURES.md  README.md  REQUIREMENTS.md  TESTCASES.md  pyproject.toml  sharepoint.config.json
Accounting/.claude/: settings.json
Accounting/.claude/agents/: accountant.md  tax-reviewer.md
Accounting/config/: accounts.yaml  moneyforward.config.json  system.yaml
Accounting/core/: __init__.py  config.py  extract.py  gate.py  ingest.py  moneyforward.py  oauth.py  pdfsplit.py  policy.py  refdata.py  register.py  revise.py  token_store.py
Accounting/docs/: accounting-policy.md  caveats.md  company-specific.md  compliance-checklist.md  design.md  manual.md  runbook-expense.md
Accounting/docs/adr/: 0001-aws-hosting.md
Accounting/docs/setup/: moneyforward-api-setup.md
Accounting/scenarios/: README.md  monthly-review.md
Accounting/scripts/: check_compliance.py  cli.py  expense_pipeline.py  expense_xlsx.py  imageproc.py  mf_expense_api.py  notify.py  oauth_listener.py  pdfproc.py  policy_loader.py  spike_moneyforward.py
Accounting/scripts/hooks/: block_dangerous.py  hook_common.py  post_edit_test.py  protect_paths.py
Accounting/tests/: conftest.py  test_cli_mf.py  test_config_env.py  test_decoupling.py  test_docs_lint.py  test_expense_cli.py  test_expense_xlsx.py  test_extract.py  test_gate.py  test_imageproc.py  test_ingest.py  test_mf_expense_api.py  test_moneyforward_config.py  test_notify.py  test_oauth.py  test_oauth_listener.py  test_pdfproc.py  test_pdfsplit.py  test_policy.py  test_refdata.py  test_register.py  test_revise.py  test_smoke.py  test_spike_moneyforward.py  test_token_store.py
Accounting/workspace/: README.md
InitialDocument/: 02_基本設計書.md  03_運営規程・第0回アジェンダ.md  CLAUDE.md
Magi/: BACKLOG.md  CLAUDE.md  DEVELOPMENT.md  DOCS.md  FEATURES.md  README.md  REQUIREMENTS.md  TESTCASES.md  sharepoint.config.json
TradeCouncil/: BACKLOG.md  CLAUDE.md  DEVELOPMENT.md  DOCS.md  FEATURES.md  README.md  REQUIREMENTS.md  TESTCASES.md  pyproject.toml  sharepoint.config.json
app/: .env.example  .gitignore  CLAUDE.md  DEVELOPMENT.md  README.md
bots/: base.py  dummy_random_walk.py
config/: system.yaml
core/: config.py  logsetup.py
docs/: 01_要件定義書.md  02_基本設計書.md  03_運営規程・第0回アジェンダ.md  04_データベース設計書.md  05_開発フロー・実行環境方針.md  07_シナリオ・人格基盤.md  エグゼクティブ概要.md
feedback/: kpi.py
ideas/: README.md
prototype/: .gitignore  CLAUDE.md  DEVELOPMENT.md  DOCS.md  FEATURES.md  README.md  REQUIREMENTS.md  TESTCASES.md
scenarios/: README.md  brainstorm.md  council.md  deliberation.md  document-review.md  persona-test.md
scripts/: ask_gemini.py  ask_openai.py  bridge_common.py  cli.py  cli_status.py  list_models.py  sharepoint.py
shared/: BACKLOG.md  FEATURES.md  README.md  REQUIREMENTS.md  TESTCASES.md  __init__.py  ask_gemini.py  ask_openai.py  bridge_common.py  extract_office.py  md_to_docx.py  sharepoint.py
sharepoint/: README.md
tests/: conftest.py
(+149 files in other folders)
