[project]
name = "tradecouncil"
version = "0.1.0"
description = "TradeCouncil - マルチエージェント自動売買ガバナンス・フレームワーク (Phase 0)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "SQLAlchemy>=2.0",
    "PyYAML>=6.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
# AWS(Phase 1・ADR-0006)。本体には含めない。CloudWatch Agent 方式が主で、
# アプリ直送/エクスポートが必要になったときのみ導入する
aws = [
    "boto3>=1.34",       # S3 / CloudWatch / SNS クライアント
    "watchtower>=3.1",   # logging → CloudWatch Logs ハンドラ(直送する場合)
]

[project.scripts]
tc = "scripts.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { include = ["core*", "bots*", "feedback*", "scripts*"] } }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["error::DeprecationWarning:core.*"]

[tool.coverage.run]
branch = true

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["prototype"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
